- rpm/apply-patches: put the patch loops from kernel-binary.spec.in   and kernel-source.spec.in to one place.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -35,7 +35,7 @@
 %define rpm_install_dir %buildroot%obj_install_dir
 %define kernel_build_dir %my_builddir/linux-obj
 
-%(chmod +x %_sourcedir/{arch-symbols,find-provides,guards,check-for-config-changes,check-supported-list,modversions,kabi.pl,split-modules})
+%(chmod +x %_sourcedir/{apply-patches,arch-symbols,find-provides,guards,check-for-config-changes,check-supported-list,modversions,kabi.pl,split-modules})
 
 %global cpu_arch %(%_sourcedir/arch-symbols %_target_cpu)
 %define cpu_arch_flavor %cpu_arch/%build_flavor
@@ -247,15 +247,11 @@ supported_conf --default=0 base >%kernel_build_dir/Module.base
 
 cd linux-%srcversion
 
-# Apply patches
-echo "trap 'echo \"*** patch \$_ failed ***\"' ERR" >../apply-patches.sh
-%_sourcedir/guards $SYMBOLS <%_sourcedir/series.conf | \
-%if %build_vanilla
-    egrep '^patches\.(kernel\.org|rpmify)/' | \
+%_sourcedir/apply-patches \
+%if %{build_vanilla}
+	--vanilla \
 %endif
-    sed 's:^:patch -s -F0 -E -p1 --no-backup-if-mismatch -i ../:' \
-    >>../apply-patches.sh
-bash -ex ../apply-patches.sh
+	%_sourcedir/series.conf .. $SYMBOLS
 
 cd %kernel_build_dir
 
