--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -57,6 +57,7 @@ Source12:       pre.sh
 Source13:       post.sh
 Source14:       series.conf
 Source16:       guards
+Source17:       apply-patches
 Source21:       config.conf
 Source23:       supported.conf
 Source33:       check-for-config-changes
@@ -101,7 +102,7 @@ BuildRoot:      %{_tmppath}/%{name}-%{version}-build
 BuildArch:      noarch
 Prefix:         /usr/src
 
-%(chmod +x %_sourcedir/{guards,check-for-config-changes,kabi.pl,mkspec,compute-PATCHVERSION.sh,arch-symbols})
+%(chmod +x %_sourcedir/{apply-patches,guards,check-for-config-changes,kabi.pl,mkspec,compute-PATCHVERSION.sh,arch-symbols})
 
 %define symbols %(set -- $([ -e %_sourcedir/extra-symbols ] && cat %_sourcedir/extra-symbols) ; echo $*)
 %define variant_symbols %(case %name in (*-rt) echo "RT" ;; esac)
@@ -152,25 +153,17 @@ ln -sf linux%variant linux%variant  # dummy symlink
 tar xjf %_sourcedir/linux-%srcversion.tar.bz2
 mv linux-%srcversion linux-%kernelrelease%variant
 
-# generate script to apply patches
-echo "trap 'echo \"*** patch \$_ failed ***\"' ERR" \
-    >%my_builddir/apply-patches.sh
-%_sourcedir/guards %symbols <%_sourcedir/series.conf | \
-    sed 's:^:patch -s -F0 -E -p1 --no-backup-if-mismatch -i %my_builddir/:' \
-    >>%my_builddir/apply-patches.sh
 
 %if %do_vanilla
-egrep '^trap|patches\.(kernel\.org|rpmify)/' %my_builddir/apply-patches.sh \
-    >%my_builddir/apply-patches-vanilla.sh
 cp -al linux-%kernelrelease%variant linux-%kernelrelease-vanilla
 cd linux-%kernelrelease-vanilla
-bash -ex %my_builddir/apply-patches-vanilla.sh
+%_sourcedir/apply-patches --vanilla %_sourcedir/series.conf %my_builddir %symbols
 rm -f $(find . -name ".gitignore")
 cd ..
 %endif
 
 cd linux-%kernelrelease%variant
-bash -ex %my_builddir/apply-patches.sh
+%_sourcedir/apply-patches %_sourcedir/series.conf %my_builddir %symbols
 rm -f $(find . -name ".gitignore")
 
 if [ -f %_sourcedir/localversion ] ; then
