- patches.drivers/alsa-sp1-hda-59-idt92hd83xxx-hp-mute-led: ALSA:   hda - Add mute LED check for HP laptops with IDT 92HD83xxx codec   (bnc#569354).

--- a/series.conf
+++ b/series.conf
@@ -622,6 +622,7 @@
 	patches.drivers/alsa-sp1-hda-56-realtek-eapd-fix
 	patches.drivers/alsa-sp1-hda-57-cx5051-toshiba-quirk
 	patches.drivers/alsa-sp1-hda-58-cx5051-lenovo-mute-fix
+	patches.drivers/alsa-sp1-hda-59-idt92hd83xxx-hp-mute-led
 
 	########################################################
 	# Other driver fixes
