- patches.drivers/alsa-sp1-hda-60-add-idt92hd88x-support: ALSA:   hda - Add support for IDT 92HD88 family codecs (bnc#569354).

--- a/series.conf
+++ b/series.conf
@@ -623,6 +623,7 @@
 	patches.drivers/alsa-sp1-hda-57-cx5051-toshiba-quirk
 	patches.drivers/alsa-sp1-hda-58-cx5051-lenovo-mute-fix
 	patches.drivers/alsa-sp1-hda-59-idt92hd83xxx-hp-mute-led
+	patches.drivers/alsa-sp1-hda-60-add-idt92hd88x-support
 
 	########################################################
 	# Other driver fixes
