--- a/series.conf
+++ b/series.conf
@@ -889,6 +889,7 @@
 	patches.xen/xen3-patch-2.6.33-rc3
 	patches.xen/xen3-patch-2.6.33-rc3-rc4
 	patches.xen/xen3-patch-2.6.33-rc4-rc5
+	patches.xen/xen3-patch-2.6.33-rc5-rc6
 	patches.xen/xen3-seccomp-disable-tsc-option
 	patches.xen/xen3-x86-mcp51-no-dac
 	patches.xen/xen3-x86-mark_rodata_rw.patch
@@ -917,6 +918,9 @@
 	patches.xen/xen-configurable-guest-devices
 	patches.xen/xen-netback-nr-irqs
 	patches.xen/xen-netback-notify-multi
+	patches.xen/xen-netback-generalize
+	patches.xen/xen-netback-multiple-tasklets
+	patches.xen/xen-netback-kernel-threads
 	patches.xen/xen-pciback-sriov
 	patches.xen/xen-unpriv-build
 	patches.xen/xen-dcdbas
