- rpm/kernel-binary.spec.in: automatically install a matching   -devel package if kernel-source is installed.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -776,6 +776,7 @@ Group:          Development/Sources
 Provides:       multiversion(kernel)
 Provides:       %name-devel = %version-%source_rel
 Requires:       kernel-source%variant = %version-%source_rel
+Supplements:    packageand(%name:kernel-source)
 AutoReqProv:    on
 
 %description devel
