- supported.conf: marked em_cmp supported (bnc#568130)

--- a/supported.conf
+++ b/supported.conf
@@ -2463,7 +2463,7 @@
 		kernel/net/sched/cls_rsvp6
 		kernel/net/sched/cls_tcindex
 		kernel/net/sched/cls_u32
--		kernel/net/sched/em_cmp
+		kernel/net/sched/em_cmp
 -		kernel/net/sched/em_meta
 -		kernel/net/sched/em_nbyte
 -		kernel/net/sched/em_text
