- patches.drivers/alsa-sp1-hda-61-add-idt92hd88x-support2:   ALSA: hda - Adding support for another IDT 92HD83XXX codec   (bnc#569354).

--- a/series.conf
+++ b/series.conf
@@ -612,6 +612,7 @@
 	patches.drivers/alsa-sp1-hda-58-cx5051-lenovo-mute-fix
 	patches.drivers/alsa-sp1-hda-59-idt92hd83xxx-hp-mute-led
 	patches.drivers/alsa-sp1-hda-60-add-idt92hd88x-support
+	patches.drivers/alsa-sp1-hda-61-add-idt92hd88x-support2
 
 	########################################################
 	# Other driver fixes
