- supported.conf: mark snd-wss-lib unsupported

--- a/supported.conf
+++ b/supported.conf
@@ -2589,6 +2589,7 @@
 +isa		kernel/sound/isa/snd-sgalaxy
 +isa		kernel/sound/isa/snd-sscape
 +isa		kernel/sound/isa/wavefront/snd-wavefront
++isa		kernel/sound/isa/wss/snd-wss-lib
 -		kernel/sound/oss/ad1848
 -		kernel/sound/oss/aedsp16				# Audio Excel DSP 16 Driver Version 1.3
 -		kernel/sound/oss/kahlua					# Kahlua VSA1 PCI Audio
