--- a/series.conf
+++ b/series.conf
@@ -264,7 +264,7 @@
 	patches.suse/reiser4-set_page_dirty_notag
 	patches.suse/file-capabilities-disable-by-default.diff
 
-	patches.suse/files-slab-rcu.patch
++npiggin	patches.suse/files-slab-rcu.patch
 	patches.suse/mm-tune-dirty-limits.patch
 
 	patches.suse/mm-devzero-optimisation.patch
