- patches.fixes/dm-stripe-zero-stripes: dm-stripe: return -EINVAL   if stripe count is zero (bnc#576312).

--- a/series.conf
+++ b/series.conf
@@ -651,6 +651,7 @@
 	patches.fixes/dm-release-map_lock-before-set_disk_ro
 	patches.suse/dm-mpath-no-activate-for-offlined-paths
 	patches.suse/dm-mpath-no-partitions-feature
+	patches.fixes/dm-stripe-zero-stripes
 
 	########################################################
 	# md
