--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -206,7 +206,7 @@ Obsoletes:      ocfs2-kmp-%build_flavor
 Obsoletes:      quickcam-kmp-%build_flavor < 0.6.7
 
 # Provide the exported symbols as "ksym(symbol) = hash"
-%define __find_provides %_sourcedir/find-provides %my_builddir %name
+%define __find_provides %_sourcedir/find-provides %name
 
 # Will modules not listed in supported.conf abort the kernel build (0/1)?
 %define supported_modules_check 0
@@ -344,6 +344,7 @@ fi
 # get rid of /usr/lib/rpm/brp-strip-debug
 # strip removes too much from the vmlinux ELF binary
 export NO_BRP_STRIP_DEBUG=true
+export STRIP_KEEP_SYMTAB='*/vmlinux-*'
 
 # /lib/modules/%kernelrelease-%build_flavor/build will be a stale symlink until the
 # kernel-source package is installed. Don't check for stale symlinks
@@ -388,9 +389,6 @@ add_vmlinux()
         # make vmlinux executable so that find-debuginfo.sh picks it up
         # (TODO: fix find-debuginfo.sh instead)
         chmod +x %buildroot/$vmlinux
-        # exctact the provided symbols before they are stripped away
-        echo %buildroot/$vmlinux | /usr/lib/rpm/find-provides.ksyms %name > \
-            %my_builddir/$(basename $vmlinux).provides
     fi
 %endif
     if $compressed; then
@@ -629,7 +627,6 @@ done
 {   cd %buildroot
     find boot \
 	\( -type l -o -name 'initrd-*' \) -printf '%%%%ghost /%%p\n' -o \
-	-type f -name 'vmlinux-*.provides' -prune -o \
 	-type f -name 'vmlinux-*' -printf '%%%%attr(0644, root, root) /%%p\n' -o \
         -type f -printf '/%%p\n'
 
