- disable patches.suse/64bytes_lvb_len.diff in series.conf

--- a/series.conf
+++ b/series.conf
@@ -394,7 +394,7 @@
 	# dlm
 	########################################################
 	patches.fixes/dlm-enable-debug.patch
-	patches.suse/64bytes_lvb_len.diff
++coly	patches.suse/64bytes_lvb_len.diff
 
 	########################################################
 	# ocfs2
