- patches.arch/ppc-pseries-ncpus-1: powerpc: Add static fields   to ibm,client-architecture call (bnc#570909). - patches.arch/ppc-pseries-ncpus-2: powerpc/pseries: Pass more   accurate number of supported cores to firmware (bnc#570909).

--- a/series.conf
+++ b/series.conf
@@ -229,6 +229,8 @@
 	patches.fixes/ptrace-getsiginfo
 	patches.arch/ppc-ipic-suspend-without-83xx-fix
 	patches.arch/ppc-vmcoreinfo.diff
+	patches.arch/ppc-pseries-ncpus-1
+	patches.arch/ppc-pseries-ncpus-2
 
         ########################################################
         # PS3
