- patches.drivers/alsa-sp1-hda-66-idt-hp-mute-led-fix-polarity:   ALSA: hda - Fix default polarity of mute-LED GPIO on 92HD83x/88x   codecs (bnc#578190).

--- a/series.conf
+++ b/series.conf
@@ -617,6 +617,7 @@
 	patches.drivers/alsa-sp1-hda-63-idt-hp-mute-led-detect
 	patches.drivers/alsa-sp1-hda-64-idt-hp-mute-led-cleanup
 	patches.drivers/alsa-sp1-hda-65-idt-hp-mute-led-cleanup2
+	patches.drivers/alsa-sp1-hda-66-idt-hp-mute-led-fix-polarity
 
 	########################################################
 	# Other driver fixes
