- Update to 2.6.33-rc7.   - Eliminated 1 patch.

--- a/series.conf
+++ b/series.conf
@@ -31,6 +31,7 @@
 	patches.kernel.org/patch-2.6.33-rc3-rc4
 	patches.kernel.org/patch-2.6.33-rc4-rc5
 	patches.kernel.org/patch-2.6.33-rc5-rc6
+	patches.kernel.org/patch-2.6.33-rc6-rc7
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -47,7 +48,6 @@
 	patches.rpmify/rt2860-use-skb_tail_pointer
 	patches.rpmify/rtl8192e-use-skb_tail_pointer
 
-	patches.rpmify/hugetlbfs-fix-section-mismatches
 	patches.rpmify/rtl8192e-fix-section-mismatches
 	patches.rpmify/dmar-fix-section-mismatch
 	patches.rpmify/hpsa-fix-section-mismatch
