- patches.apparmor/apparmor-check-for-network-in-interrupt-and-work-around:   apparmor: check for network in interrupt and work around   (bnc#492961, bln#350789).

--- a/series.conf
+++ b/series.conf
@@ -714,6 +714,7 @@
 	patches.apparmor/apparmor-missing-unlock
 	patches.apparmor/ptrace_may_access-fix
 	patches.apparmor/apparmor-fix-security_ops-task_setrlimit-api-use
+	patches.apparmor/apparmor-check-for-network-in-interrupt-and-work-around
 
 	########################################################
 	# Address space layout randomization
