- patches.fixes/dvb-l64781.ko-broken-with-gcc-4.5.patch: dvb:   l64781.ko broken with gcc 4.5.

--- a/series.conf
+++ b/series.conf
@@ -632,6 +632,8 @@
 	patches.suse/raw_device_max_minors_param.diff
 	patches.suse/no-partition-scan
 
+	patches.fixes/dvb-l64781.ko-broken-with-gcc-4.5.patch
+
 	########################################################
 	# Other drivers we have added to the tree
 	########################################################
