--- a/series.conf
+++ b/series.conf
@@ -733,6 +733,7 @@
 	patches.suse/kdb_fix_ia64_build.patch
 	patches.suse/kdb_dont_touch_i8042_early.patch
 	patches.suse/kdb-fix-assignment-from-incompatible-pointer-warnings
+	patches.suse/kdb-handle-nonexistance-keyboard-controller
 
         ########################################################
         # Other patches for debugging
