--- a/series.conf
+++ b/series.conf
@@ -736,6 +736,7 @@
 	patches.suse/kdb_dont_touch_i8042_early.patch
 	patches.suse/kdb-fix-assignment-from-incompatible-pointer-warnings
 	patches.suse/kdb-handle-nonexistance-keyboard-controller
+	patches.suse/kdb-fix-kdb_cmds-to-include-the-arch-common-macro
 
         ########################################################
         # Other patches for debugging
