- patches.fixes/acpi_fix_no_critical_tp.patch: ACPI thermal:   Don't invalidate thermal zone if critical trip point is bad   (bnc#531547). - patches.fixes/acpi_pci_hot_plug_sanity_checks.patch: ACPI:   acpi_bus_{scan,bus,add}: return -ENODEV if no device was found   (bnc#531547). - patches.fixes/acpi_thermal_check_trip_points.patch: ACPI   thermal: Check for thermal zone requirement (bnc#531547).

--- a/series.conf
+++ b/series.conf
@@ -320,6 +320,10 @@
 	patches.arch/acpi_srat-pxm-rev-ia64.patch
 	patches.arch/acpi_srat-pxm-rev-x86-64.patch
 
+	patches.fixes/acpi_fix_no_critical_tp.patch
+	patches.fixes/acpi_thermal_check_trip_points.patch
+	patches.fixes/acpi_pci_hot_plug_sanity_checks.patch
+
 	########################################################
 	# CPUFREQ
 	########################################################
