- patches.fixes/novfs-err_ptr-fix.diff: Oops in novfs:unlink_local   (bnc#569071).

--- a/series.conf
+++ b/series.conf
@@ -429,6 +429,7 @@
 	########################################################
 	patches.suse/novfs-client-module
 	patches.suse/novfs-fix-debug-message.patch
+	patches.fixes/novfs-err_ptr-fix.diff
 
 	########################################################
 	# other filesystem stuff
