--- a/series.conf
+++ b/series.conf
@@ -370,6 +370,7 @@
 	patches.fixes/nfsd-05-sunrpc-cache-allow-thread-to-block-while-waiting-for.patch
 	patches.fixes/nfsd-06-sunrpc-cache-retry-cache-lookups-that-return-ETIMEDO.patch
 	patches.fixes/nfsd-07-nfsd-idmap-drop-special-request-deferal-in-favour-of.patch
+	patches.fixes/nfs-find-crash
 
 	########################################################
 	# lockd + statd
