Add sparc64 configuration
Signed-off-by: Jan Engelhardt <jengelh@medozas.de>

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -442,6 +442,12 @@ add_vmlinux()
     find man -name '*.9' -exec install -m 644 -D '{}' %buildroot/usr/share/man/man9/ ';'
 %endif
 %endif
+%ifarch sparc64
+    add_vmlinux --compressed
+    image=zImage
+    cp -p arch/sparc/boot/$image %buildroot/boot/vmlinuz-%kernelrelease-%build_flavor
+    image=vmlinux
+%endif
 
 # end of build_kdump
 %endif
