- patches.fixes/novfs-fix-inode-uid: novfs: Get proper UID when   looking up inode (bnc#486997). - patches.fixes/novfs-incorrect-filesize-fix: novfs: novfs   reports incorrect file size (bnc#426536). - patches.fixes/novfs-truncate-fix: novfs: Fixes corruption of   OO documents on NSS Volumes (bnc#508259).

--- a/series.conf
+++ b/series.conf
@@ -431,6 +431,9 @@
 	patches.suse/novfs-client-module
 	patches.suse/novfs-fix-debug-message.patch
 	patches.fixes/novfs-err_ptr-fix.diff
+	patches.fixes/novfs-fix-inode-uid
+	patches.fixes/novfs-incorrect-filesize-fix
+	patches.fixes/novfs-truncate-fix
 
 	########################################################
 	# other filesystem stuff
