--- a/series.conf
+++ b/series.conf
@@ -54,6 +54,7 @@
 	patches.rpmify/hpsa-fix-section-mismatch
 	patches.rpmify/rt2860-fix-section-mismatches
 	patches.rpmify/ppc-crashdump-typefix
+	patches.rpmify/ftrace-fix-ftrace_event_call-alignment-for-use-with-gcc-4-5
 
         ########################################################
         # kABI consistency patches
