kernel-source: split source and devel into two packages
This reduces the amount of files that need to be installed to be able
to compile KMPs. That is both a disk space and time saver.

Signed-off-by: Jan Engelhardt <jengelh@medozas.de>

--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -41,7 +41,7 @@ Group:          Development/Sources
 Url:            http://www.kernel.org/
 AutoReqProv:    off
 BuildRequires:  coreutils sed
-BuildRequires:  fdupes
+BuildRequires:  fdupes pcre-tools
 Requires(post): coreutils sed
 Provides:       multiversion(kernel)
 Provides:       linux
@@ -62,6 +62,7 @@ Source21:       config.conf
 Source23:       supported.conf
 Source33:       check-for-config-changes
 Source34:       check-supported-list
+Source35:	group-source-files.pl
 Source37:       README.SUSE
 Source38:       README.KSYMS
 Source40:       source-timestamp
@@ -101,6 +102,8 @@ Source120:      kabi.tar.bz2
 BuildRoot:      %{_tmppath}/%{name}-%{version}-build
 BuildArch:      noarch
 Prefix:         /usr/src
+# Source is only complete with devel files.
+Requires:	kernel-devel = %version-%release
 
 %(chmod +x %_sourcedir/{apply-patches,guards,check-for-config-changes,kabi.pl,mkspec,compute-PATCHVERSION.sh,arch-symbols})
 
@@ -111,6 +114,19 @@ Prefix:         /usr/src
 
 %description
 Linux kernel sources with many fixes and improvements.
+
+%source_timestamp
+
+%package -n kernel-devel
+Summary:	Development files needed for building kernel modules
+License:	GPL v2 only
+Group:		Development/Sources
+AutoReqProv:	off
+Provides:	multiversion(kernel)
+
+%description -n kernel-devel
+Kernel-level headers and Makefiles required for development of
+external kernel modules.
 
 %source_timestamp
 
@@ -192,15 +208,27 @@ for script in post; do
         %_sourcedir/source-$script.sh > %name-$script.sh
 done
 
+pushd "%buildroot"
+perl "%_sourcedir/group-source-files.pl" \
+	-D "$OLDPWD/devel.files" -N "$OLDPWD/nondevel.files" \
+	-L "%src_install_dir"
+popd
 
 %post -f %name-post.sh
-%files
+
+%post -n kernel-devel -f %name-post.sh
+
+%files -f nondevel.files
 %defattr(-, root, root)
+%ghost /usr/src/linux%variant
+/usr/src/linux%variant-%kernelrelease/README.SUSE
+
+%files -n kernel-devel -f devel.files
+%defattr(-,root,root)
 %ghost /usr/src/linux%variant
 /usr/share/doc/packages/%name
 /etc/rpm/macros.kernel-source
 /usr/lib/rpm/kernel-module-subpackage
-/%src_install_dir
 
 %if %do_vanilla
 %files vanilla
