--- a/rpm/kernel-syms.spec.in
+++ b/rpm/kernel-syms.spec.in
@@ -27,7 +27,7 @@ Version:        @RPMVERSION@
 %if %using_buildservice
 Release:        @RELEASE_PREFIX@<RELEASE>
 %else
-%define kernel_source_release %(LC_ALL=C rpm -q kernel-source%variant-%version --qf "%{RELEASE}" | grep -v 'not installed' || echo 0)
+%define kernel_source_release %(LC_ALL=C rpm -q kernel-devel%variant-%version --qf "%{RELEASE}" | grep -v 'not installed' || echo 0)
 Release:        %kernel_source_release
 %endif
 License:        GPL v2 only
@@ -38,7 +38,7 @@ BuildRequires:  coreutils
 @REQUIRES@
 Provides:       multiversion(kernel)
 Source:         README.KSYMS
-Requires:       kernel-source%variant = %version-%source_rel
+Requires:       kernel-devel%variant = %version-%source_rel
 BuildRoot:      %{_tmppath}/%{name}-%{version}-build
 ExclusiveArch:  @ARCHS@
 Prefix:         /usr/src
