--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -347,7 +347,7 @@ export NO_BRP_STRIP_DEBUG=true
 export STRIP_KEEP_SYMTAB='*/vmlinux-*'
 
 # /lib/modules/%kernelrelease-%build_flavor/build will be a stale symlink until the
-# kernel-source package is installed. Don't check for stale symlinks
+# kernel-devel package is installed. Don't check for stale symlinks
 # in the brp-symlink check:
 export NO_BRP_STALE_LINK_ERROR=yes
 
@@ -520,7 +520,7 @@ if [ %CONFIG_MODULES = y ]; then
 %endif
 
     # Also put the resulting file in %rpm_install_dir/%cpu_arch/%build_flavor
-    # so that kernel-source + kernel-%build_flavor is sufficient for building
+    # so that kernel-devel + kernel-%build_flavor is sufficient for building
     # modules that have modversions as well.
     mkdir -p %rpm_install_dir/%cpu_arch/%build_flavor
     cp Module.symvers %rpm_install_dir/%cpu_arch/%build_flavor
@@ -778,8 +778,8 @@ License:        GPL v2 only
 Group:          Development/Sources
 Provides:       multiversion(kernel)
 Provides:       %name-devel = %version-%source_rel
-Requires:       kernel-source%variant = %version-%source_rel
-Supplements:    packageand(%name:kernel-source)
+Requires:       kernel-devel%variant = %version-%source_rel
+Supplements:    packageand(%name:kernel-devel)
 AutoReqProv:    on
 
 %description devel
