- patches.xen/xen3-patch-2.6.33-rc8-final: Build fix for the   2.6.33-final update.

--- a/series.conf
+++ b/series.conf
@@ -903,6 +903,7 @@
 	patches.xen/xen3-patch-2.6.33-rc5-rc6
 	patches.xen/xen3-patch-2.6.33-rc6-rc7
 	patches.xen/xen3-patch-2.6.33-rc7-rc8
+	patches.xen/xen3-patch-2.6.33-rc8-final
 	patches.xen/xen3-seccomp-disable-tsc-option
 	patches.xen/xen3-x86-mcp51-no-dac
 	patches.xen/xen3-x86-mark_rodata_rw.patch
