- patches.fixes/sunrpc-monotonic-expiry: sunrpc: use monotonic   time in expiry cache (bnc#578668).

--- a/series.conf
+++ b/series.conf
@@ -363,6 +363,7 @@
 	patches.fixes/nfsd-05-sunrpc-cache-allow-thread-to-block-while-waiting-for.patch
 	patches.fixes/nfsd-06-sunrpc-cache-retry-cache-lookups-that-return-ETIMEDO.patch
 	patches.fixes/nfsd-07-nfsd-idmap-drop-special-request-deferal-in-favour-of.patch
+	patches.fixes/sunrpc-monotonic-expiry
 
 	########################################################
 	# lockd + statd
