- Update Xen patches to 2.6.33 and c/s 1003. - patches.xen/xen-clockevents: replace Xen's custom time handling   with such using GENERIC_CLOCKEVENTS infrastructure. - Update Xen config files.

--- a/series.conf
+++ b/series.conf
@@ -897,13 +897,7 @@
 	patches.xen/xen3-patch-2.6.30
 	patches.xen/xen3-patch-2.6.31
 	patches.xen/xen3-patch-2.6.32
-	patches.xen/xen3-patch-2.6.33-rc3
-	patches.xen/xen3-patch-2.6.33-rc3-rc4
-	patches.xen/xen3-patch-2.6.33-rc4-rc5
-	patches.xen/xen3-patch-2.6.33-rc5-rc6
-	patches.xen/xen3-patch-2.6.33-rc6-rc7
-	patches.xen/xen3-patch-2.6.33-rc7-rc8
-	patches.xen/xen3-patch-2.6.33-rc8-final
+	patches.xen/xen3-patch-2.6.33
 	patches.xen/xen3-seccomp-disable-tsc-option
 	patches.xen/xen3-x86-mcp51-no-dac
 	patches.xen/xen3-x86-mark_rodata_rw.patch
@@ -928,6 +922,7 @@
 	patches.xen/xen-sysdev-suspend
 	patches.xen/xen-ipi-per-cpu-irq
 	patches.xen/xen-virq-per-cpu-irq
+	patches.xen/xen-clockevents
 	patches.xen/xen-spinlock-poll-early
 	patches.xen/xen-configurable-guest-devices
 	patches.xen/xen-netback-nr-irqs
@@ -935,7 +930,6 @@
 	patches.xen/xen-netback-generalize
 	patches.xen/xen-netback-multiple-tasklets
 	patches.xen/xen-netback-kernel-threads
-	patches.xen/xen-pciback-sriov
 	patches.xen/xen-unpriv-build
 	patches.xen/xen-dcdbas
 	patches.xen/xen-x86-panic-no-reboot
@@ -947,8 +941,6 @@
 	patches.xen/xen-x86-machphys-prediction
 	patches.xen/xen-x86-exit-mmap
 	patches.xen/xen-x86-per-cpu-vcpu-info
-	patches.xen/xen-x86-xtime-lock
-	patches.xen/xen-x86-time-per-cpu
 	patches.xen/xen-x86_64-pgd-pin
 	patches.xen/xen-x86_64-pgd-alloc-order
 	patches.xen/xen-x86_64-dump-user-pgt
