- patches.fixes/xfs-nonblocking-inode-locking-io-completion.patch:   xfs: Non-blocking inode locking in IO completion (bnc#568319).

--- a/series.conf
+++ b/series.conf
@@ -417,6 +417,7 @@
 	patches.fixes/xfs-dmapi-fixes
 	patches.fixes/xfs-redirty-ENOSPC.patch
 	patches.fixes/xfs-export-debug
+	patches.fixes/xfs-nonblocking-inode-locking-io-completion.patch
 
 	########################################################
 	# novfs
