Produce kernel-devel%variant

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -779,7 +779,7 @@ Group:          Development/Sources
 Provides:       multiversion(kernel)
 Provides:       %name-devel = %version-%source_rel
 Requires:       kernel-devel%variant = %version-%source_rel
-Supplements:    packageand(%name:kernel-devel)
+Supplements:    packageand(%name:kernel-devel%variant)
 AutoReqProv:    on
 
 %description devel
