--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -120,14 +120,14 @@ Linux kernel sources with many fixes and improvements.
 
 %source_timestamp
 
-%package -n kernel-devel
+%package -n kernel-devel%variant
 Summary:	Development files needed for building kernel modules
 License:	GPL v2 only
 Group:		Development/Sources
 AutoReqProv:	off
 Provides:	multiversion(kernel)
 
-%description -n kernel-devel
+%description -n kernel-devel%variant
 Kernel-level headers and Makefiles required for development of
 external kernel modules.
 
@@ -234,7 +234,7 @@ popd
 
 %post -f %name-post.sh
 
-%post -n kernel-devel -f %name-postdevel.sh
+%post -n kernel-devel%variant -f %name-postdevel.sh
 
 %files
 %defattr(-, root, root)
@@ -246,7 +246,7 @@ popd
 # the package - which leads to build choosing a previous, mismatching
 # kernel-source when requested as BuildRequires.
 
-%files -n kernel-devel -f devel.files
+%files -n kernel-devel%variant -f devel.files
 %defattr(-,root,root)
 %ghost /usr/src/linux%variant
 /usr/share/doc/packages/%name
