- rpm/find-provides, rpm/symsets.pl: Generate symsets again   (bnc#582907).

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -163,7 +163,7 @@ Obsoletes:      ocfs2-kmp-%build_flavor
 Obsoletes:      quickcam-kmp-%build_flavor < 0.6.7
 
 # Provide the exported symbols as "ksym(symbol) = hash"
-%define __find_provides %_sourcedir/find-provides %name
+%define __find_provides %_sourcedir/find-provides %my_builddir %name
 
 # Will modules not listed in supported.conf abort the kernel build (0/1)?
 %define supported_modules_check 0
@@ -455,6 +455,9 @@ make vdso_install $MAKE_ARGS INSTALL_MOD_PATH=%buildroot
 dd if=/dev/zero of=%buildroot/boot/initrd-%kernelrelease-%build_flavor \
 	bs=1024 seek=2047 count=1
 
+# Figure out where the symbols that vmlinux exports are defined.
+%_sourcedir/built-in-where < Module.symvers > Module.symvers.split
+
 if [ %CONFIG_MODULES = y ]; then
     mkdir -p %rpm_install_dir/%cpu_arch_flavor
     mkdir -p %buildroot/usr/src/linux-obj/%cpu_arch
@@ -540,7 +543,7 @@ if [ %CONFIG_MODULES = y ]; then
         # check for kabi changes
         %_sourcedir/kabi.pl --rules %my_builddir/kabi/severities \
             %my_builddir/kabi/%cpu_arch/symvers-%build_flavor \
-            Module.symvers || res=$?
+            Module.symvers.split || res=$?
     fi
     if [ $res -ne 0 ]; then
 	if [ ! -e %my_builddir/kabi/%cpu_arch/ignore-%build_flavor -a \
@@ -554,6 +557,36 @@ if [ %CONFIG_MODULES = y ]; then
 
     tar -cf - -T %my_builddir/obj-files | \
 	tar -xf - -C %rpm_install_dir/%cpu_arch_flavor
+    # generate symsets
+    mkdir -p %my_builddir/{base,main,extra}-symsets
+    for f in %my_builddir/{base,main,unsupported}-modules; do
+        if [ -f "$f" ]; then
+            sed 's:^/:%buildroot/:' "$f"
+        fi > "$f-br"
+    done
+    reference=
+    if test -e %my_builddir/kabi/$cpu_arch/symsets-@FLAVOR@.tar.gz; then
+        tar xzf %my_builddir/kabi/$cpu_arch/symsets-@FLAVOR@.tar.gz -C \
+	    %my_builddir/kabi/$cpu_arch
+        reference="--reference %my_builddir/kabi/$cpu_arch/symsets-*-@FLAVOR@/"
+    fi
+    %_sourcedir/symsets.pl --generate-symsets \
+        $reference \
+        --symvers=Module.symvers.split \
+        --modules=%my_builddir/base-modules-br \
+        --output-dir=%my_builddir/base-symsets
+    %_sourcedir/symsets.pl --generate-symsets \
+        $reference \
+        --modules=%my_builddir/main-modules-br \
+        --required-modules=%my_builddir/base-modules-br \
+        --output-dir=%my_builddir/main-symsets
+    %_sourcedir/symsets.pl --generate-symsets \
+        $reference \
+        --modules=%my_builddir/unsupported-modules-br \
+        --required-modules=%my_builddir/base-modules-br \
+        --required-modules=%my_builddir/main-modules-br \
+        --output-dir=%my_builddir/extra-symsets
+
     # bnc#507084
     find %rpm_install_dir/%cpu_arch_flavor/scripts -type f -perm -111 | \
         while read f; do
@@ -565,6 +598,13 @@ if [ %CONFIG_MODULES = y ]; then
     # Replace the absolute with a relative path
     sed -i "s,%build_src_dir,../../../linux-%kernelrelease%variant,g" \
 	%rpm_install_dir/%cpu_arch_flavor/Makefile
+    symsets=%my_builddir/symsets-$KERNELRELEASE
+    mkdir -p $symsets
+    find %my_builddir/{base,main,extra}-symsets -type f \
+	| xargs --replace='{}' cp '{}' $symsets/
+    tar c -C ${symsets%/*} ${symsets##*/} \
+	| gzip -9 \
+	> %buildroot/boot/symsets-$KERNELRELEASE.tar.gz
 fi
 
 add_dirs_to_filelist() {
