--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -66,6 +66,7 @@ Source35:	group-source-files.pl
 Source37:       README.SUSE
 Source38:       README.KSYMS
 Source40:       source-timestamp
+Source41:       built-in-where
 Source44:       find-provides
 Source45:       split-modules
 Source46:       modversions
