- rpm/kernel-source.spec.in: Add symsets.pl to the src.rpm.

--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -67,6 +67,7 @@ Source37:       README.SUSE
 Source38:       README.KSYMS
 Source40:       source-timestamp
 Source41:       built-in-where
+Source42:       symsets.pl
 Source44:       find-provides
 Source45:       split-modules
 Source46:       modversions
