- rpm/kernel-binary.spec.in: Fix symsets for non-split kernels.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -575,17 +575,21 @@ if [ %CONFIG_MODULES = y ]; then
         --symvers=Module.symvers.split \
         --modules=%my_builddir/base-modules-br \
         --output-dir=%my_builddir/base-symsets
+%if %split_base
     %_sourcedir/symsets.pl --generate-symsets \
         $reference \
         --modules=%my_builddir/main-modules-br \
         --required-modules=%my_builddir/base-modules-br \
         --output-dir=%my_builddir/main-symsets
+%endif
+%if %split_extra
     %_sourcedir/symsets.pl --generate-symsets \
         $reference \
         --modules=%my_builddir/unsupported-modules-br \
         --required-modules=%my_builddir/base-modules-br \
         --required-modules=%my_builddir/main-modules-br \
         --output-dir=%my_builddir/extra-symsets
+%endif
 
     # bnc#507084
     find %rpm_install_dir/%cpu_arch_flavor/scripts -type f -perm -111 | \
