- rpm/kernel-binary.spec.in: the dwarfextract package has been   dropped from Factory.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -92,7 +92,7 @@ Requires(post): mkinitrd
 BuildRequires:  python
 %endif
 %ifarch s390 s390x
-%if %build_vanilla
+%if %build_vanilla && 0%{?suse_version} < 1130
 BuildRequires:  dwarfextract
 %endif
 %endif
