- supported.conf: Added kernel/drivers/i2c/i2c-smbus, i2c-parport   now depends on it.

--- a/supported.conf
+++ b/supported.conf
@@ -575,6 +575,7 @@
 		kernel/drivers/i2c/chips/tsl2550			# Light sensor
 		kernel/drivers/i2c/i2c-core				# I2C-Bus main module
 		kernel/drivers/i2c/i2c-dev				# I2C /dev entries driver
+		kernel/drivers/i2c/i2c-smbus
 		kernel/drivers/ide/ide-cd_mod
 		kernel/drivers/ide/ide-core
 		kernel/drivers/ide/ide-disk
