--- a/series.conf
+++ b/series.conf
@@ -40,6 +40,7 @@
 	patches.rpmify/dmar-fix-section-mismatch
 	patches.rpmify/hpsa-fix-section-mismatch
 	patches.rpmify/ppc-crashdump-typefix
+	patches.rpmify/powerpc-mpc52xx-build-fix
 
         ########################################################
         # kABI consistency patches
