- patches.rpmify/powerpc-kvm-build-failure-workaround: powerpc:   kvm build failure workaround.

--- a/series.conf
+++ b/series.conf
@@ -41,6 +41,7 @@
 	patches.rpmify/hpsa-fix-section-mismatch
 	patches.rpmify/ppc-crashdump-typefix
 	patches.rpmify/powerpc-mpc52xx-build-fix
+	patches.rpmify/powerpc-kvm-build-failure-workaround
 
         ########################################################
         # kABI consistency patches
