- supported.conf: Added kernel/drivers/gpio/max730x, max7301 now   depends on it.

--- a/supported.conf
+++ b/supported.conf
@@ -408,6 +408,7 @@
 		kernel/drivers/firmware/iscsi_ibft
 		kernel/drivers/gpio/bt8xxgpio
 		kernel/drivers/gpio/max7301
+		kernel/drivers/gpio/max730x
 		kernel/drivers/gpio/max732x
 		kernel/drivers/gpio/mcp23s08
 		kernel/drivers/gpio/pca953x
