- patches.rpmify/powerpc-mpc52xx-build-fix: powerpc: Build fix   for mpc52xx.

--- a/series.conf
+++ b/series.conf
@@ -48,6 +48,7 @@
 	patches.rpmify/rt2860-fix-section-mismatches
 	patches.rpmify/ppc-crashdump-typefix
 	patches.rpmify/ftrace-fix-ftrace_event_call-alignment-for-use-with-gcc-4-5
+	patches.rpmify/powerpc-mpc52xx-build-fix
 
         ########################################################
         # kABI consistency patches
