--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -176,7 +176,8 @@ NoSource:       110
 NoSource:       111
 NoSource:       120
 
-# The following KMPs have been integrated into the kernel package.
+# The following KMPs have been integrated into the kernel package,
+# grouped by the last product that contained them.
 # sles10 / 10.3
 Obsoletes:      iwlwifi-kmp-%build_flavor
 Obsoletes:      ipw3945-kmp-%build_flavor
@@ -201,12 +202,11 @@ Obsoletes:      brocade-bfa-kmp-%build_flavor
 Obsoletes:      kvm-kmp-%build_flavor
 Obsoletes:      perfmon-kmp-%build_flavor
 Obsoletes:      iwlagn-2-6-27-kmp-%build_flavor
+Obsoletes:      msi-wmi-kmp-%build_flavor
 # sle11
 Obsoletes:      ocfs2-kmp-%build_flavor
 # 11.1
 Obsoletes:      quickcam-kmp-%build_flavor < 0.6.7
-# SLE11 SP1 and/or 2.6.34
-Obsoletes:      msi-wmi-kmp-%build_flavor
 
 # Provide the exported symbols as "ksym(symbol) = hash"
 %define __find_provides %_sourcedir/find-provides %name
