- Updated to 2.6.34-rc1-git6.   - Eliminated 8 patches.

--- a/series.conf
+++ b/series.conf
@@ -28,6 +28,7 @@
 	# Send separate patches upstream if you find a problem...
 	########################################################
 	patches.kernel.org/patch-2.6.34-rc1
+	patches.kernel.org/patch-2.6.34-rc1-git6
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -95,7 +96,6 @@
 +needs_update-33	patches.suse/sched-revert-latency-defaults
 
 	# writable limits
-	patches.suse/rlim-0014-ipc-use-helpers-for-rlimits.patch
 	patches.suse/rlim-0015-SECURITY-add-task_struct-to-setrlimit.patch
 	patches.suse/rlim-0016-core-add-task_struct-to-update_rlimit_cpu.patch
 	patches.suse/rlim-0017-sys_setrlimit-make-sure-rlim_max-never-grows.patch
@@ -293,9 +293,6 @@
 	patches.arch/acpi_srat-pxm-rev-store.patch
 	patches.arch/acpi_srat-pxm-rev-ia64.patch
 	patches.arch/acpi_srat-pxm-rev-x86-64.patch
-
-	patches.fixes/acpi_fix_no_critical_tp.patch
-	patches.fixes/acpi_thermal_check_trip_points.patch
 
 	########################################################
 	# CPUFREQ
