- Updated to 2.6.34-rc2.   - Eliminated 4 patches.

--- a/series.conf
+++ b/series.conf
@@ -28,7 +28,7 @@
 	# Send separate patches upstream if you find a problem...
 	########################################################
 	patches.kernel.org/patch-2.6.34-rc1
-	patches.kernel.org/patch-2.6.34-rc1-git6
+	patches.kernel.org/patch-2.6.34-rc1-rc2
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -39,9 +39,7 @@
 	patches.rpmify/ia64-mca-fix-cast-from-integer-to-pointer-warning
 
 	patches.rpmify/dmar-fix-section-mismatch
-	patches.rpmify/hpsa-fix-section-mismatch
 	patches.rpmify/ppc-crashdump-typefix
-	patches.rpmify/powerpc-mpc52xx-build-fix
 	patches.rpmify/powerpc-kvm-build-failure-workaround
 
         ########################################################
@@ -491,8 +489,6 @@
 	patches.fixes/scsi-dh-alua-retry-UA
 	patches.fixes/scsi-add-tgps-setting
 	patches.fixes/scsi-dh-alua-send-stpg
-	patches.fixes/scsi-dh-emc-mode-select-10-size
-	patches.fixes/scsi-dh-emc-rw-mismatch
 	patches.fixes/scsi-dh-rdac-add-stk
 	patches.fixes/scsi-retry-alua-transition-in-progress
 
