- patches.suse/xfs-dmapi-fix-incompatible-pointer-type-warning:   xfs/dmapi: fix incompatible pointer type warning.

--- a/series.conf
+++ b/series.conf
@@ -388,6 +388,7 @@
 	patches.fixes/xfs-dmapi-fixes
 	patches.fixes/xfs-export-debug
 	patches.suse/xfs-dmapi-2-6-34-api-changes
+	patches.suse/xfs-dmapi-fix-incompatible-pointer-type-warning
 
 	########################################################
 	# novfs
