- patches.fixes/powerpc-fix-handling-of-strnlen-with-zero-len:   powerpc: fix handling of strnlen with zero len (bnc#582681).

--- a/series.conf
+++ b/series.conf
@@ -195,6 +195,7 @@
 	patches.fixes/ptrace-getsiginfo
 	patches.arch/ppc-ipic-suspend-without-83xx-fix
 	patches.arch/ppc-vmcoreinfo.diff
+	patches.fixes/powerpc-fix-handling-of-strnlen-with-zero-len
 
         ########################################################
         # PS3
