- patches.fixes/novfs-fix-oops-in-scope-finding: novfs: fix an   oops in novfs scope-finding code (bnc#588579).

--- a/series.conf
+++ b/series.conf
@@ -383,6 +383,7 @@
 	patches.fixes/novfs-fix-inode-uid
 	patches.fixes/novfs-incorrect-filesize-fix
 	patches.fixes/novfs-truncate-fix
+	patches.fixes/novfs-fix-oops-in-scope-finding
 
 	########################################################
 	# other filesystem stuff
