- patches.fixes/hid-fix-gyration-oops.patch: HID: fix oops in   gyration_event() (bnc#589329).

--- a/series.conf
+++ b/series.conf
@@ -547,6 +547,7 @@
 	patches.drivers/elousb.patch
 	patches.fixes/input-add-acer-aspire-5710-to-nomux.patch
 	patches.drivers/synaptics-hp-clickpad
+	patches.fixes/hid-fix-gyration-oops.patch
 
 	##########################################################
 	# Sound
