Revert "kernel-source: split location of files"
This reverts commit 1461148. Do not change the kernel source location to
not break packages' and users' expectations and do not waste space by
duplicating files.

Conflicts:

	rpm/kernel-source.spec.in

--- a/rpm/kernel-docs.spec.in
+++ b/rpm/kernel-docs.spec.in
@@ -57,8 +57,8 @@ EOF
 # use texmf.cnf from local source
 export TEXMFCNF=$RPM_BUILD_DIR
 export LANG=en_US
-make -C /usr/src/linux-src-%{version}-%{release_major} O=$PWD -k -i mandocs %{?jobs:-j%jobs}
-make -C /usr/src/linux-src-%{version}-%{release_major} O=$PWD -k -i pdfdocs %{?jobs:-j%jobs}
+make -C /usr/src/linux-%{version}-%{release_major} O=$PWD -k -i mandocs %{?jobs:-j%jobs}
+make -C /usr/src/linux-%{version}-%{release_major} O=$PWD -k -i pdfdocs %{?jobs:-j%jobs}
 
 %install
 rm -rf $RPM_BUILD_ROOT
@@ -82,7 +82,7 @@ fi
 
 ln -s /usr/share/man/man9/request_threaded_irq.9.gz $RPM_BUILD_ROOT/usr/share/man/man9/request_irq.9.gz
 
-cp -a /usr/src/linux-src-%{version}-%{release_major}/{COPYING,CREDITS,MAINTAINERS,README,REPORTING-BUGS} .
+cp -a /usr/src/linux-%{version}-%{release_major}/{COPYING,CREDITS,MAINTAINERS,README,REPORTING-BUGS} .
 
 %clean
 rm -rf $RPM_BUILD_ROOT
