--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -18,9 +18,6 @@
 # norootforbuild
 # icecream 0
 
-# There are a few packages that do BuildRequire the fullsrc: perf, kernel-doc
-%define build_fullsrc 1
-
 %define srcversion @SRCVERSION@
 %define patchversion @PATCHVERSION@
 %define variant @VARIANT@%{nil}
@@ -30,7 +27,6 @@
 %define src_install_dir usr/src/linux-%kernelrelease%variant
 %define obj_install_dir /%src_install_dir-obj
 %define rpm_install_dir %buildroot%real_install_dir
-%define fullsrc_install_dir usr/src/linux-src-%kernelrelease%variant
 
 Name:           kernel-source@VARIANT@
 Summary:        The Linux Kernel Sources
@@ -53,7 +49,6 @@ Provides:       %name = %version-%source_rel
 Source0:        http://www.kernel.org/pub/linux/kernel/v2.6/linux-%srcversion.tar.bz2
 Source2:        source-post.sh
 Source3:        kernel-source.rpmlintrc
-Source7:	source-postdevel.sh
 Source8:        devel-pre.sh
 Source9:        devel-post.sh
 Source10:       preun.sh
@@ -107,6 +102,8 @@ Source120:      kabi.tar.bz2
 BuildRoot:      %{_tmppath}/%{name}-%{version}-build
 BuildArch:      noarch
 Prefix:         /usr/src
+# Source is only complete with devel files.
+Requires:	kernel-devel = %version-%release
 
 %(chmod +x %_sourcedir/{apply-patches,guards,check-for-config-changes,kabi.pl,mkspec,compute-PATCHVERSION.sh,arch-symbols})
 
@@ -167,9 +164,6 @@ mkdir -p $RPM_BUILD_ROOT/usr/src
 cd $RPM_BUILD_ROOT/usr/src
 
 ln -sf linux%variant linux%variant  # dummy symlink
-%if %build_fullsrc
-ln -sf linux-src%variant linux-src%variant  # dummy symlink
-%endif
 
 # Unpack the vanilla kernel sources
 tar -xjf %_sourcedir/linux-%srcversion.tar.bz2
@@ -200,6 +194,7 @@ fi
 DOC=$RPM_BUILD_ROOT/usr/share/doc/packages/%name
 mkdir -p $DOC
 cp %_sourcedir/README.SUSE $DOC
+ln -s /usr/share/doc/packages/%name/README.SUSE %buildroot/%src_install_dir/
 
 install -m 755 -d $RPM_BUILD_ROOT/etc/rpm
 install -m 644 %_sourcedir/macros.kernel-source $RPM_BUILD_ROOT/etc/rpm/
@@ -207,44 +202,26 @@ install -m 755 -d $RPM_BUILD_ROOT/usr/lib/rpm
 install -m 644 %_sourcedir/kernel-module-subpackage \
     $RPM_BUILD_ROOT/usr/lib/rpm/
 
-for script in post postdevel; do
+for script in post; do
     sed -e "s:@KERNELRELEASE@:%kernelrelease:g" \
         -e "s:@SRCVARIANT@:%variant:g" \
         %_sourcedir/source-$script.sh > %name-$script.sh
 done
 
 pushd "%buildroot"
-%if %build_fullsrc
-# Explicitly tag source so that user-recompiled kernels
-# are visible in bugreports
-cp -a "%src_install_dir" "%fullsrc_install_dir"
-echo "-%release-LOCAL" >"%fullsrc_install_dir/localversion"
-ln -s "/usr/share/doc/packages/%name/README.SUSE" "%buildroot/%fullsrc_install_dir/"
-%endif
-
 perl "%_sourcedir/group-source-files.pl" \
 	-D "$OLDPWD/devel.files" -N "$OLDPWD/nondevel.files" \
 	-L "%src_install_dir"
-
-# Remove files that are not needed for KMP building
-xargs -ra "$OLDPWD/nondevel.files" rm -f
-find "%src_install_dir" -type d -print0 | sort -rz | \
-	xargs -0 rmdir 2>/dev/null || :
 popd
 
 %post -f %name-post.sh
 
-%post -n kernel-devel%variant -f %name-postdevel.sh
+%post -n kernel-devel%variant -f %name-post.sh
 
-%files
+%files -f nondevel.files
 %defattr(-, root, root)
-%if %build_fullsrc
-/%fullsrc_install_dir
-%endif
-%ghost /usr/src/linux-src%variant
-# The ghost link is always packaged. We need something, or rpmlint will delete
-# the package - which leads to build choosing a previous, mismatching
-# kernel-source when requested as BuildRequires.
+%ghost /usr/src/linux%variant
+/usr/src/linux%variant-%kernelrelease/README.SUSE
 
 %files -n kernel-devel%variant -f devel.files
 %defattr(-,root,root)
