--- a/series.conf
+++ b/series.conf
@@ -759,102 +759,106 @@
 	patches.xen/linux-2.6.19-rc1-kexec-move_segment_code-i386.patch
 	patches.xen/linux-2.6.19-rc1-kexec-move_segment_code-x86_64.patch
 	patches.xen/ipv6-no-autoconf
-+xen_needs_update	patches.xen/pci-guestdev
-+xen_needs_update	patches.xen/pci-reserve
-+xen_needs_update+needs_update-33	patches.xen/sfc-driverlink
-+xen_needs_update+needs_update-33	patches.xen/sfc-resource-driver
-+xen_needs_update+needs_update-33	patches.xen/sfc-driverlink-conditional
-+xen_needs_update+needs_update-33	patches.xen/sfc-external-sram
-+xen_needs_update	patches.xen/tmem
+	patches.xen/pci-guestdev
+	patches.xen/pci-reserve
++needs_update-33	patches.xen/sfc-driverlink
++needs_update-33	patches.xen/sfc-resource-driver
++needs_update-33	patches.xen/sfc-driverlink-conditional
++needs_update-33	patches.xen/sfc-external-sram
+	patches.xen/tmem
 
 	# bulk stuff, new files for xen
-+xen_needs_update	patches.xen/xen3-auto-xen-arch.diff
-+xen_needs_update	patches.xen/xen3-auto-xen-drivers.diff
-+xen_needs_update	patches.xen/xen3-auto-include-xen-interface.diff
+	patches.xen/xen3-auto-xen-arch.diff
+	patches.xen/xen3-auto-xen-drivers.diff
+	patches.xen/xen3-auto-include-xen-interface.diff
 
 	# kconfig bits for xen
-+xen_needs_update	patches.xen/xen3-auto-xen-kconfig.diff
+	patches.xen/xen3-auto-xen-kconfig.diff
 
 	# common code changes
-+xen_needs_update	patches.xen/xen3-auto-common.diff
-+xen_needs_update	patches.xen/xen3-auto-arch-x86.diff
-+xen_needs_update	patches.xen/xen3-auto-arch-i386.diff
-+xen_needs_update	patches.xen/xen3-auto-arch-x86_64.diff
+	patches.xen/xen3-auto-common.diff
+	patches.xen/xen3-auto-arch-x86.diff
+	patches.xen/xen3-auto-arch-i386.diff
+	patches.xen/xen3-auto-arch-x86_64.diff
 
 	# fixups due to upstream Xen parts
-+xen_needs_update	patches.xen/xen3-fixup-xen
+	patches.xen/xen3-fixup-xen
 
-+xen_needs_update+needs_update-33	patches.xen/sfc-set-arch
-+xen_needs_update+needs_update-33	patches.xen/sfc-endianness
++needs_update-33	patches.xen/sfc-set-arch
++needs_update-33	patches.xen/sfc-endianness
 
 	# newer changeset backports
 
 	# changes outside arch/{i386,x86_64}/xen
-+xen_needs_update	patches.xen/xen3-fixup-kconfig
-+xen_needs_update	patches.xen/xen3-fixup-common
-+xen_needs_update	patches.xen/xen3-fixup-arch-x86
+	patches.xen/xen3-fixup-kconfig
+	patches.xen/xen3-fixup-common
+	patches.xen/xen3-fixup-arch-x86
 
 	# ports of other patches
-+xen_needs_update	patches.xen/xen3-patch-2.6.18
-+xen_needs_update	patches.xen/xen3-patch-2.6.19
-+xen_needs_update	patches.xen/xen3-patch-2.6.20
-+xen_needs_update	patches.xen/xen3-patch-2.6.21
-+xen_needs_update	patches.xen/xen3-patch-2.6.22
-+xen_needs_update	patches.xen/xen3-patch-2.6.23
-+xen_needs_update	patches.xen/xen3-patch-2.6.24
-+xen_needs_update	patches.xen/xen3-patch-2.6.25
-+xen_needs_update	patches.xen/xen3-patch-2.6.26
-+xen_needs_update	patches.xen/xen3-patch-2.6.27
-+xen_needs_update	patches.xen/xen3-patch-2.6.28
-+xen_needs_update	patches.xen/xen3-patch-2.6.29
-+xen_needs_update	patches.xen/xen3-patch-2.6.30
-+xen_needs_update	patches.xen/xen3-patch-2.6.31
-+xen_needs_update	patches.xen/xen3-patch-2.6.32
-+xen_needs_update	patches.xen/xen3-patch-2.6.33
-+xen_needs_update	patches.xen/xen3-seccomp-disable-tsc-option
-+xen_needs_update	patches.xen/xen3-x86-mcp51-no-dac
-+xen_needs_update	patches.xen/xen3-x86-mark_rodata_rw.patch
-+xen_needs_update	patches.xen/xen3-kdb-x86
-+xen_needs_update	patches.xen/xen3-stack-unwind
-+xen_needs_update	patches.xen/xen3-x86_64-unwind-annotations
+	patches.xen/xen3-patch-2.6.18
+	patches.xen/xen3-patch-2.6.19
+	patches.xen/xen3-patch-2.6.20
+	patches.xen/xen3-patch-2.6.21
+	patches.xen/xen3-patch-2.6.22
+	patches.xen/xen3-patch-2.6.23
+	patches.xen/xen3-patch-2.6.24
+	patches.xen/xen3-patch-2.6.25
+	patches.xen/xen3-patch-2.6.26
+	patches.xen/xen3-patch-2.6.27
+	patches.xen/xen3-patch-2.6.28
+	patches.xen/xen3-patch-2.6.29
+	patches.xen/xen3-patch-2.6.30
+	patches.xen/xen3-patch-2.6.31
+	patches.xen/xen3-patch-2.6.32
+	patches.xen/xen3-patch-2.6.33
+	patches.xen/xen3-patch-2.6.34-rc2
+	patches.xen/xen3-seccomp-disable-tsc-option
+	patches.xen/xen3-x86-mcp51-no-dac
+	patches.xen/xen3-x86-mark_rodata_rw.patch
+	patches.xen/xen3-kdb-x86
+	patches.xen/xen3-stack-unwind
+	patches.xen/xen3-x86_64-unwind-annotations
 
 	# bugfixes and enhancements
-+xen_needs_update	patches.xen/xen-balloon-max-target
-+xen_needs_update	patches.xen/xen-modular-blktap
-+xen_needs_update	patches.xen/xen-blkback-bimodal-suse
-+xen_needs_update	patches.xen/xen-blkif-protocol-fallback-hack
-+xen_needs_update	patches.xen/xen-blkback-cdrom
-+xen_needs_update	patches.xen/xen-blktap-write-barriers
-+xen_needs_update	patches.xen/xen-op-packet
-+xen_needs_update	patches.xen/xen-blkfront-cdrom
-+xen_needs_update	patches.xen/xen-sections
-+xen_needs_update	patches.xen/xen-swiotlb-heuristics
-+xen_needs_update	patches.xen/xen-kconfig-compat
-+xen_needs_update	patches.xen/xen-cpufreq-report
-+xen_needs_update	patches.xen/xen-staging-build
-+xen_needs_update	patches.xen/xen-sysdev-suspend
-+xen_needs_update	patches.xen/xen-ipi-per-cpu-irq
-+xen_needs_update	patches.xen/xen-virq-per-cpu-irq
-+xen_needs_update	patches.xen/xen-clockevents
-+xen_needs_update	patches.xen/xen-spinlock-poll-early
-+xen_needs_update	patches.xen/xen-configurable-guest-devices
-+xen_needs_update	patches.xen/xen-netback-nr-irqs
-+xen_needs_update	patches.xen/xen-netback-notify-multi
-+xen_needs_update	patches.xen/xen-netback-generalize
-+xen_needs_update	patches.xen/xen-netback-multiple-tasklets
-+xen_needs_update	patches.xen/xen-netback-kernel-threads
-+xen_needs_update	patches.xen/xen-unpriv-build
-+xen_needs_update	patches.xen/xen-dcdbas
-+xen_needs_update	patches.xen/xen-x86-panic-no-reboot
-+xen_needs_update	patches.xen/xen-x86-dcr-fallback
-+xen_needs_update	patches.xen/xen-x86-consistent-nmi
-+xen_needs_update	patches.xen/xen-x86-no-lapic
-+xen_needs_update	patches.xen/xen-x86-pmd-handling
-+xen_needs_update	patches.xen/xen-x86-bigmem
-+xen_needs_update	patches.xen/xen-x86-machphys-prediction
-+xen_needs_update	patches.xen/xen-x86-exit-mmap
-+xen_needs_update	patches.xen/xen-x86-per-cpu-vcpu-info
-+xen_needs_update	patches.xen/xen-x86_64-pgd-pin
-+xen_needs_update	patches.xen/xen-x86_64-pgd-alloc-order
-+xen_needs_update	patches.xen/xen-x86_64-dump-user-pgt
-+xen_needs_update	patches.xen/xen-x86_64-note-init-p2m
+	patches.xen/xen-balloon-max-target
+	patches.xen/xen-modular-blktap
+	patches.xen/xen-blkback-bimodal-suse
+	patches.xen/xen-blkif-protocol-fallback-hack
+	patches.xen/xen-blkback-cdrom
+	patches.xen/xen-blktap-write-barriers
+	patches.xen/xen-op-packet
+	patches.xen/xen-blkfront-cdrom
+	patches.xen/xen-sections
+	patches.xen/xen-swiotlb-heuristics
+	patches.xen/xen-kconfig-compat
+	patches.xen/xen-cpufreq-report
+	patches.xen/xen-staging-build
+	patches.xen/xen-sysdev-suspend
+	patches.xen/xen-ipi-per-cpu-irq
+	patches.xen/xen-virq-per-cpu-irq
+	patches.xen/xen-clockevents
+	patches.xen/xen-spinlock-poll-early
+	patches.xen/xen-configurable-guest-devices
+	patches.xen/xen-netback-nr-irqs
+	patches.xen/xen-netback-notify-multi
+	patches.xen/xen-netback-generalize
+	patches.xen/xen-netback-multiple-tasklets
+	patches.xen/xen-netback-kernel-threads
+	patches.xen/xen-unpriv-build
+	patches.xen/xen-vusb-module-alias
+	patches.xen/xen-vscsi-module-alias
+	patches.xen/xen-floppy
+	patches.xen/xen-dcdbas
+	patches.xen/xen-x86-panic-no-reboot
+	patches.xen/xen-x86-dcr-fallback
+	patches.xen/xen-x86-consistent-nmi
+	patches.xen/xen-x86-no-lapic
+	patches.xen/xen-x86-pmd-handling
+	patches.xen/xen-x86-bigmem
+	patches.xen/xen-x86-machphys-prediction
+	patches.xen/xen-x86-exit-mmap
+	patches.xen/xen-x86-per-cpu-vcpu-info
+	patches.xen/xen-x86_64-pgd-pin
+	patches.xen/xen-x86_64-pgd-alloc-order
+	patches.xen/xen-x86_64-dump-user-pgt
+	patches.xen/xen-x86_64-note-init-p2m
