- Update to 2.6.34-rc2-git3.   - Eliminated 1 patch.   - Fixed ps3 config.

--- a/series.conf
+++ b/series.conf
@@ -29,6 +29,7 @@
 	########################################################
 	patches.kernel.org/patch-2.6.34-rc1
 	patches.kernel.org/patch-2.6.34-rc1-rc2
+	patches.kernel.org/patch-2.6.34-rc2-git3
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -343,7 +344,6 @@
 	########################################################
 	# Reiserfs Patches
 	########################################################
-	patches.fixes/reiserfs-replay-honor-ro
 	patches.suse/reiserfs-barrier-default
 
 	########################################################
