- patches.fixes/reiserfs-fix-locking-BUG-during-mount-failure:   reiserfs: Fix locking BUG during mount failure (bnc#591807).

--- a/series.conf
+++ b/series.conf
@@ -345,6 +345,7 @@
 	# Reiserfs Patches
 	########################################################
 	patches.suse/reiserfs-barrier-default
+	patches.fixes/reiserfs-fix-locking-BUG-during-mount-failure
 
 	########################################################
 	# dlm
