- rpm/kernel-source.spec.in: Provide $pkg = %version-%source_rel   in kernel-devel and kernel-source-vanilla.

--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -123,6 +123,7 @@ License:	GPL v2 only
 Group:		Development/Sources
 AutoReqProv:	off
 Provides:	multiversion(kernel)
+Provides:       kernel-devel%variant = %version-%source_rel
 
 %description -n kernel-devel%variant
 Kernel-level headers and Makefiles required for development of
@@ -136,6 +137,7 @@ License:        GPL v2 only
 Group:          Development/Sources
 AutoReqProv:    off
 Provides:       multiversion(kernel)
+Provides:       %name-vanilla = %version-%source_rel
 
 %description vanilla
 Vanilla Linux kernel sources with minor build fixes.
