- rpm/kernel-binary.spec.in, rpm/kernel-source.spec.in, rpm/mkspec:   Generated the NoSource and %setup lines automatically from the   preamble.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -162,19 +162,7 @@ BuildRoot:      %{_tmppath}/%{name}-%{version}-build
 ExclusiveArch:  @ARCHS@
 
 # These files are found in the kernel-source package:
-NoSource:       0
-NoSource:       100
-NoSource:       101
-NoSource:       102
-NoSource:       103
-NoSource:       104
-NoSource:       105
-NoSource:       107
-NoSource:       108
-NoSource:       109
-NoSource:       110
-NoSource:       111
-NoSource:       120
+@NOSOURCE@
 
 # The following KMPs have been integrated into the kernel package,
 # grouped by the last product that contained them.
@@ -229,7 +217,7 @@ if test -e %_sourcedir/extra-symbols; then
 fi
 
 # Unpack all sources and patches
-%setup -q -c -T -a 0 -a 100 -a 101 -a 102 -a 103 -a 104 -a 105 -a 107 -a 108 -a 109 -a 110 -a 111 -a 112 -a 113 -a 120
+%setup -q -c -T -a 0 @UNPACK_PATCHES@
 
 mkdir -p %kernel_build_dir
 
