--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -135,7 +135,7 @@ fi
 echo "Symbol(s): %symbols"
 
 # Unpack all sources and patches
-%setup -q -c -T -a 100 -a 101 -a 102 -a 103 -a 104 -a 105 -a 107 -a 108 -a 109 -a 110 -a 111 -a 112 -a 113
+%setup -q -c -T @UNPACK_PATCHES@
 
 %build
 # Release number without the EXTRAVERSION
