--- a/series.conf
+++ b/series.conf
@@ -346,6 +346,7 @@
 	########################################################
 	patches.suse/reiserfs-barrier-default
 	patches.fixes/reiserfs-fix-locking-BUG-during-mount-failure
+	patches.fixes/reiserfs-remove-2-tb-file-size-limit
 
 	########################################################
 	# dlm
