- rpm/kernel-binary.spec.in, rpm/mkspec, scripts/tar-up.sh:   Generate the Source: lines from kernel-source.spec.in.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -126,38 +126,7 @@ Conflicts:      libc.so.6()(64bit)
 %endif
 Provides:       kernel = %version-%source_rel
 @PROVIDES_OBSOLETES@
-
-Source0:        http://www.kernel.org/pub/linux/kernel/v2.6/linux-%srcversion.tar.bz2
-Source10:       preun.sh
-Source11:       postun.sh
-Source12:       pre.sh
-Source13:       post.sh
-Source20:       series.conf
-Source22:       supported.conf
-Source30:       arch-symbols
-Source31:       guards
-Source33:       check-for-config-changes
-Source34:       check-supported-list
-Source40:       source-timestamp
-Source44:       find-provides
-Source46:       modversions
-Source47:       kabi.pl
-Source48:       split-modules
-Source49:	kernel-spec-macros
-Source100:      config.tar.bz2
-Source101:      patches.arch.tar.bz2
-Source102:      patches.drivers.tar.bz2
-Source103:      patches.fixes.tar.bz2
-Source104:      patches.rpmify.tar.bz2
-Source105:      patches.suse.tar.bz2
-Source107:      patches.xen.tar.bz2
-Source108:      patches.addon.tar.bz2
-Source109:      patches.kernel.org.tar.bz2
-Source110:      patches.apparmor.tar.bz2
-Source111:      patches.rt.tar.bz2
-Source112:      patches.trace.tar.bz2
-Source113:      patches.kabi.tar.bz2
-Source120:      kabi.tar.bz2
+@SOURCES@
 BuildRoot:      %{_tmppath}/%{name}-%{version}-build
 ExclusiveArch:  @ARCHS@
 
