- rpm/kernel-binary.spec.in, rpm/kernel-source.spec.in, rpm/mkspec:   Generate the chmod +x line automatically.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -35,7 +35,7 @@
 %define rpm_install_dir %buildroot%obj_install_dir
 %define kernel_build_dir %my_builddir/linux-obj
 
-%(chmod +x %_sourcedir/{apply-patches,arch-symbols,find-provides,guards,check-for-config-changes,check-supported-list,modversions,kabi.pl,split-modules})
+%(chmod +x %_sourcedir/{@SCRIPTS@})
 
 %global cpu_arch %(%_sourcedir/arch-symbols %_target_cpu)
 %define cpu_arch_flavor %cpu_arch/%build_flavor
