--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -102,7 +102,7 @@ BuildRoot:      %{_tmppath}/%{name}-%{version}-build
 BuildArch:      noarch
 Prefix:         /usr/src
 
-%(chmod +x %_sourcedir/{apply-patches,guards,check-for-config-changes,kabi.pl,mkspec,compute-PATCHVERSION.sh,arch-symbols})
+%(chmod +x %_sourcedir/{@SCRIPTS@})
 
 %define symbols %(set -- $([ -e %_sourcedir/extra-symbols ] && cat %_sourcedir/extra-symbols) ; echo $*)
 %define variant_symbols %(case %name in (*-rt) echo "RT" ;; esac)
