- rpm/configtool.pl, rpm/kernel-binary.spec.in,   rpm/kernel-source.spec.in: Add support for custom config options   in config.addon.tar.bz2. This tarball is expected to have the   same layout as config.tar.bz2 and the config options listed there   take precedence over config.tar.bz2.

--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -84,12 +84,14 @@ Source62:       old-packages.conf
 Source63:       arch-symbols
 Source64:       package-descriptions
 Source65:       kernel-spec-macros
+Source66:       configtool.pl
 Source100:      config.tar.bz2
-Source101:      patches.arch.tar.bz2
-Source102:      patches.drivers.tar.bz2
-Source103:      patches.fixes.tar.bz2
-Source104:      patches.rpmify.tar.bz2
-Source105:      patches.suse.tar.bz2
+Source101:      config.addon.tar.bz2
+Source102:      patches.arch.tar.bz2
+Source103:      patches.drivers.tar.bz2
+Source104:      patches.fixes.tar.bz2
+Source105:      patches.rpmify.tar.bz2
+Source106:      patches.suse.tar.bz2
 Source107:      patches.xen.tar.bz2
 Source108:      patches.addon.tar.bz2
 Source109:      patches.kernel.org.tar.bz2
