--- a/rpm/kernel-docs.spec.in
+++ b/rpm/kernel-docs.spec.in
@@ -17,6 +17,8 @@
 
 # norootforbuild
 
+%define patchversion @PATCHVERSION@
+
 %include %_sourcedir/kernel-spec-macros
 
 Name:           kernel-docs
@@ -57,8 +59,8 @@ EOF
 # use texmf.cnf from local source
 export TEXMFCNF=$RPM_BUILD_DIR
 export LANG=en_US
-make -C /usr/src/linux-%{version}-%{release_major} O=$PWD -k -i mandocs %{?jobs:-j%jobs}
-make -C /usr/src/linux-%{version}-%{release_major} O=$PWD -k -i pdfdocs %{?jobs:-j%jobs}
+make -C /usr/src/linux-%kernelrelease O=$PWD -k -i mandocs %{?jobs:-j%jobs}
+make -C /usr/src/linux-%kernelrelease O=$PWD -k -i pdfdocs %{?jobs:-j%jobs}
 
 %install
 rm -rf $RPM_BUILD_ROOT
@@ -82,7 +84,7 @@ fi
 
 ln -s /usr/share/man/man9/request_threaded_irq.9.gz $RPM_BUILD_ROOT/usr/share/man/man9/request_irq.9.gz
 
-cp -a /usr/src/linux-%{version}-%{release_major}/{COPYING,CREDITS,MAINTAINERS,README,REPORTING-BUGS} .
+cp -a /usr/src/linux-%kernelrelease/{COPYING,CREDITS,MAINTAINERS,README,REPORTING-BUGS} .
 
 %clean
 rm -rf $RPM_BUILD_ROOT
