--- a/series.conf
+++ b/series.conf
@@ -29,7 +29,7 @@
 	########################################################
 	patches.kernel.org/patch-2.6.34-rc1
 	patches.kernel.org/patch-2.6.34-rc1-rc2
-	patches.kernel.org/patch-2.6.34-rc2-git3
+	patches.kernel.org/patch-2.6.34-rc2-rc3
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
