--- a/series.conf
+++ b/series.conf
@@ -463,6 +463,7 @@
 	patches.drivers/libata-unlock-hpa-by-default
 
 	# Block layer fixes
+	patches.fixes/loop-update-mtime.patch
 	patches.fixes/scsi-inquiry-too-short-ratelimit
 	patches.suse/scsi-netlink-ml
 
