- patches.fixes/hibernation-fix-s2disk.patch: PM / Hibernate:   user.c, fix SNAPSHOT_SET_SWAP_AREA handling (bko#15728).

--- a/series.conf
+++ b/series.conf
@@ -106,6 +106,7 @@
 
 	patches.fixes/make-note_interrupt-fast.diff
 	patches.fixes/twl6030-fix-note_interrupt-call
+	patches.fixes/hibernation-fix-s2disk.patch
 
 
         ########################################################
