- patches.fixes/novfs-dentry-cache-limit.patch: novfs: Remove   dcache count restricting code (bnc#576026).

--- a/series.conf
+++ b/series.conf
@@ -387,6 +387,7 @@
 	patches.fixes/novfs-incorrect-filesize-fix
 	patches.fixes/novfs-truncate-fix
 	patches.fixes/novfs-fix-oops-in-scope-finding
+	patches.fixes/novfs-dentry-cache-limit.patch
 
 	########################################################
 	# other filesystem stuff
