- patches.suse/bootsplash-console-fix: Fix rendering on linux   console with bootsplash (bnc#595657,bnc#594209).

--- a/series.conf
+++ b/series.conf
@@ -550,6 +550,7 @@
 	patches.suse/Cleanup-and-make-boot-splash-work-with-KMS.patch
 	patches.suse/bootsplash-keep-multiple-data
 	patches.suse/bootsplash-scaler
+	patches.suse/bootsplash-console-fix
 	patches.drivers/elousb.patch
 	patches.fixes/input-add-acer-aspire-5710-to-nomux.patch
 	patches.drivers/synaptics-hp-clickpad
