- Update to 2.6.34-rc4.   - Eliminated 3 patches.

--- a/series.conf
+++ b/series.conf
@@ -30,6 +30,7 @@
 	patches.kernel.org/patch-2.6.34-rc1
 	patches.kernel.org/patch-2.6.34-rc1-rc2
 	patches.kernel.org/patch-2.6.34-rc2-rc3
+	patches.kernel.org/patch-2.6.34-rc3-rc4
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -345,7 +346,6 @@
 	# Reiserfs Patches
 	########################################################
 	patches.suse/reiserfs-barrier-default
-	patches.fixes/reiserfs-fix-locking-BUG-during-mount-failure
 	patches.fixes/reiserfs-remove-2-tb-file-size-limit
 	patches.fixes/reiserfs-fix-permissions-on-reiserfs_priv
 
@@ -463,7 +463,6 @@
 	patches.drivers/libata-unlock-hpa-by-default
 
 	# Block layer fixes
-	patches.fixes/loop-update-mtime.patch
 	patches.fixes/scsi-inquiry-too-short-ratelimit
 	patches.suse/scsi-netlink-ml
 
@@ -551,7 +550,6 @@
 	patches.drivers/elousb.patch
 	patches.fixes/input-add-acer-aspire-5710-to-nomux.patch
 	patches.drivers/synaptics-hp-clickpad
-	patches.fixes/hid-fix-gyration-oops.patch
 
 	##########################################################
 	# Sound
